--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -56,9 +56,9 @@
 }
 .hr-pdp {
 	border: 0;
-    height: 1px;
+    height: .1rem;
     width: 80%;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, .75), rgba(0, 0, 0, 0));
-	margin-top: -3.5rem;
+	background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, .75), rgba(0, 0, 0, 0));
+	margin-top: -3rem;
 	margin-bottom: 5rem;
 }
